samples/_failures_safe/1761413955_368a2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ce83a24.c: In function ‘main’:
./samples/SAFE/__tmp_0ce83a24.c:135:22: error: ‘comp’ undeclared (first use in this function)
  135 |         buffer_free(&comp
      |                      ^~~~
./samples/SAFE/__tmp_0ce83a24.c:135:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0ce83a24.c:135:26: error: expected ‘)’ at end of input
  135 |         buffer_free(&comp
      |                    ~     ^
      |                          )
./samples/SAFE/__tmp_0ce83a24.c:135:9: error: expected declaration or statement at end of input
  135 |         buffer_free(&comp
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_0ce83a24.c:135:9: error: expected declaration or statement at end of input
